updated with additional answers

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.166963"
+       "0.166802"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.218863"
+       "0.21835"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.218509"
+       "0.219378"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,16 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.635717"
+       "0.636466"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,21 +175,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Codeup students buy, on average, 3 poptart packages (+- 1.5) a day from the snack vending machine. If on monday the machine is restocked with 17 poptart packages, how likely is it that I will be able to buy some poptarts on Friday afternoon?"
+    "There are approximitely 3 web development cohorts for every 1 data science cohort at Codeup. Assuming that Codeup randomly selects an alumni to put on a billboard, what are the odds that the two billboards I drive past both have data science students on them?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.724247"
+       "0.437738"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_DS = .25\n",
+    "nstu = ncols = 2\n",
+    "n_simulated = nrows = 1000000\n",
+    "\n",
+    "data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "ds = data <= p_DS\n",
+    "\n",
+    "(fail.sum(axis=1) >= 1).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Codeup students buy, on average, 3 poptart packages (+- 1.5) a day from the snack vending machine. If on monday the machine is restocked with 17 poptart packages, how likely is it that I will be able to buy some poptarts on Friday afternoon?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72406"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,6 +238,152 @@
     "\n",
     "# Find the mean of true values\n",
     "can_buy.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare Heights\n",
+    "\n",
+    "* Men have an average height of 178 cm and standard deviation of 8cm.\n",
+    "* Women have a mean of 170, sd = 6cm.\n",
+    "* If a man and woman are chosen at random, P(woman taller than man)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "mheight = np.random.normal(178 , 8, size=(1000000,1))\n",
+    "\n",
+    "fheight = np.random.normal(170 , 6, size=(1000000,1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When installing anaconda on a student's computer, there's a 1 in 250 chance that the download is corrupted and the installation fails. What are the odds that after having 50 students download anaconda, no one has an installation issue? 100 students?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.818488"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The chance a student fails\n",
+    "p_fail = 1/250\n",
+    "\n",
+    "# The number of students\n",
+    "nstu = ncols = 50\n",
+    "# The number of simulations ran\n",
+    "n_simulated = nrows = 1000000\n",
+    "\n",
+    "# Use random to assign random values to each student for each simulation\n",
+    "data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "# If the number is less than or equal to the fail chance then it fails (True or 1)\n",
+    "fail = data <= p_fail\n",
+    "\n",
+    "#Sum the number of non fails (False or 0) and if 0 then True and find the mean of true values\n",
+    "(fail.sum(axis=1) == 0).mean()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.669377"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same as above but with more students\n",
+    "p_fail = 1/250\n",
+    "nstu = ncols = 100\n",
+    "n_simulated = nrows = 1000000\n",
+    "\n",
+    "data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "fail = data <= p_fail\n",
+    "\n",
+    "\n",
+    "(fail.sum(axis=1) == 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There's a 70% chance on any given day that there will be at least one food truck at Travis Park. However, you haven't seen a food truck there in 3 days. How unlikely is this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.03098124, 0.03620305, 0.48283426, ..., 0.24582962, 0.48138379,\n",
+       "        0.36073485],\n",
+       "       [0.31699363, 0.4604853 , 0.2939176 , ..., 0.58187084, 0.26681843,\n",
+       "        0.55793196],\n",
+       "       [0.77378131, 0.2356767 , 0.80734244, ..., 0.9460882 , 0.76393489,\n",
+       "        0.79982348],\n",
+       "       ...,\n",
+       "       [0.4139487 , 0.10899889, 0.30716429, ..., 0.39332038, 0.29711178,\n",
+       "        0.52753523],\n",
+       "       [0.19468584, 0.88350989, 0.42042584, ..., 0.25710821, 0.71944792,\n",
+       "        0.75061657],\n",
+       "       [0.71825004, 0.85798575, 0.38657303, ..., 0.9309424 , 0.09224264,\n",
+       "        0.31876726]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_truck = .3\n",
+    "n_days = ncol = 3\n",
+    "n_sims = nrows = 1000000\n",
+    "\n",
+    "data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "truck = data <= p_truck\n",
+    "(truck.sum(axis=1) == 3).mean()"
    ]
   },
   {
