--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.166802"
+       "0.167391"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.21835"
+       "0.218931"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.219378"
+       "0.218712"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -148,10 +148,10 @@
     {
      "data": {
       "text/plain": [
-       "0.636466"
+       "0.63667"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.437738"
+       "0.062524"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
     "\n",
     "ds = data <= p_DS\n",
     "\n",
-    "(fail.sum(axis=1) >= 1).mean()"
+    "(ds.sum(axis=1) == 2).mean()"
    ]
   },
   {
@@ -215,16 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.72406"
+       "0.724799"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,10 +234,10 @@
     "pop_tarts = np.random.normal(3, 1.5, size=(1000000,5))\n",
     "\n",
     "# Along axis 1, sum the number of poptars bought and pull in true or false valuse if the number is less than 17\n",
-    "can_buy = pop_tarts.sum(axis=1) < 17\n",
+    "can_buy = pop_tarts.sum(axis=1)\n",
     "\n",
     "# Find the mean of true values\n",
-    "can_buy.mean()"
+    "(can_buy <17).mean()"
    ]
   },
   {
@@ -253,16 +253,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.212071"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mheight = np.random.normal(178 , 8, size=(1000000,1))\n",
     "\n",
     "fheight = np.random.normal(170 , 6, size=(1000000,1))\n",
-    "\n"
+    "\n",
+    "(fheight > mheight).mean()"
    ]
   },
   {
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -282,10 +294,10 @@
     {
      "data": {
       "text/plain": [
-       "0.818488"
+       "0.818305"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.669377"
+       "0.669919"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,41 +361,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.03098124, 0.03620305, 0.48283426, ..., 0.24582962, 0.48138379,\n",
-       "        0.36073485],\n",
-       "       [0.31699363, 0.4604853 , 0.2939176 , ..., 0.58187084, 0.26681843,\n",
-       "        0.55793196],\n",
-       "       [0.77378131, 0.2356767 , 0.80734244, ..., 0.9460882 , 0.76393489,\n",
-       "        0.79982348],\n",
-       "       ...,\n",
-       "       [0.4139487 , 0.10899889, 0.30716429, ..., 0.39332038, 0.29711178,\n",
-       "        0.52753523],\n",
-       "       [0.19468584, 0.88350989, 0.42042584, ..., 0.25710821, 0.71944792,\n",
-       "        0.75061657],\n",
-       "       [0.71825004, 0.85798575, 0.38657303, ..., 0.9309424 , 0.09224264,\n",
-       "        0.31876726]])"
+       "0.026937"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p_truck = .3\n",
-    "n_days = ncol = 3\n",
+    "n_days = ncols = 3\n",
     "n_sims = nrows = 1000000\n",
     "\n",
-    "data = np.random.random((nrows, ncols))\n",
+    "truck_data = np.random.random((nrows, ncols))\n",
     "\n",
-    "truck = data <= p_truck\n",
+    "truck = truck_data <= p_truck\n",
     "(truck.sum(axis=1) == 3).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>322.694111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56.979468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>107.862781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>89.488808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>103.793522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999995</th>\n",
+       "      <td>133.237007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999996</th>\n",
+       "      <td>241.409569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999997</th>\n",
+       "      <td>140.467031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999998</th>\n",
+       "      <td>60.078640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999999</th>\n",
+       "      <td>250.412317</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0\n",
+       "0       322.694111\n",
+       "1        56.979468\n",
+       "2       107.862781\n",
+       "3        89.488808\n",
+       "4       103.793522\n",
+       "...            ...\n",
+       "999995  133.237007\n",
+       "999996  241.409569\n",
+       "999997  140.467031\n",
+       "999998   60.078640\n",
+       "999999  250.412317\n",
+       "\n",
+       "[1000000 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one = pd.DataFrame(np.random.uniform(1,365,1000000))\n",
+    "one "
    ]
   },
   {
