forgot a part of a question, answered!

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -356,6 +356,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What is the probability that we observe an installation issue within the first 150 students that download anaconda?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.452327"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same as above but with more students\n",
+    "p_fail = 1/250\n",
+    "nstu = ncols = 150\n",
+    "n_simulated = nrows = 1000000\n",
+    "\n",
+    "data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "fail = data <= p_fail\n",
+    "\n",
+    "\n",
+    "(fail.sum(axis=1) > 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "How likely is it that 450 students all download anaconda without an issue?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.164906"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same as above but with more students\n",
+    "p_fail = 1/250\n",
+    "nstu = ncols = 450\n",
+    "n_simulated = nrows = 1000000\n",
+    "\n",
+    "data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "fail = data <= p_fail\n",
+    "\n",
+    "\n",
+    "(fail.sum(axis=1) == 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There's a 70% chance on any given day that there will be at least one food truck at Travis Park. However, you haven't seen a food truck there in 3 days. How unlikely is this?"
    ]
   },
@@ -390,7 +465,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+    "How likely is it that a food truck will show up sometime this week?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.999795"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_truck = .7\n",
+    "n_days = ncols = 7\n",
+    "n_sims = nrows = 1000000\n",
+    "\n",
+    "truck_data = np.random.random((nrows, ncols))\n",
+    "\n",
+    "(truck_data.sum(axis=1) >= 1).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If 23 people are in the same room, what are the odds that:\n",
+    "* two of them share a birthday?\n",
+    "* What if it's 20 people? \n",
+    "* 40?"
    ]
   },
   {
