answeres the birthday question

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -506,108 +506,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>322.694111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>56.979468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>107.862781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>89.488808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>103.793522</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999995</th>\n",
-       "      <td>133.237007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999996</th>\n",
-       "      <td>241.409569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999997</th>\n",
-       "      <td>140.467031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999998</th>\n",
-       "      <td>60.078640</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999999</th>\n",
-       "      <td>250.412317</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000000 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 0\n",
-       "0       322.694111\n",
-       "1        56.979468\n",
-       "2       107.862781\n",
-       "3        89.488808\n",
-       "4       103.793522\n",
-       "...            ...\n",
-       "999995  133.237007\n",
-       "999996  241.409569\n",
-       "999997  140.467031\n",
-       "999998   60.078640\n",
-       "999999  250.412317\n",
-       "\n",
-       "[1000000 rows x 1 columns]"
+       "0.50835"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "one = pd.DataFrame(np.random.uniform(1,365,1000000))\n",
-    "one "
+    "n_simulation = 100000\n",
+    "n_people = 23 \n",
+    "birthday = pd.DataFrame(np.random.choice(range(365), size = (n_simulation, n_people)))\n",
+    "birthday['uniques'] = birthday.nunique(axis=1)\n",
+    "(birthday.uniques != 23).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41051"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_simulation = 100000\n",
+    "n_people = 20 \n",
+    "birthday = pd.DataFrame(np.random.choice(range(365), size = (n_simulation, n_people)))\n",
+    "birthday['uniques'] = birthday.nunique(axis=1)\n",
+    "(birthday.uniques != 20).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.89082"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_simulation = 100000\n",
+    "n_people = 40 \n",
+    "birthday = pd.DataFrame(np.random.choice(range(365), size = (n_simulation, n_people)))\n",
+    "birthday['uniques'] = birthday.nunique(axis=1)\n",
+    "(birthday.uniques != 40).mean()"
    ]
   },
   {
