--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fd4b150490>]"
+       "[<matplotlib.lines.Line2D at 0x1e58042dc40>]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,33 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1994"
+       "0.1367"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "n_trials = nrows = 1_000_000\n",
-    "n_dice = ncols = 1\n",
+    "n_cars = ncols = 1\n",
     "\n",
-    "rolls = np.random.choice([0, 1, 2, 3, 4], n_trials * n_dice).reshape(nrows, ncols)\n",
-    "(rolls == 0).mean()\n"
+    "cars = np.random.poisson(2, 10000)\n",
+    "(cars == 0).mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1353352832366127"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats.poisson(2).pmf(0)"
    ]
@@ -120,27 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.400778"
+       "0.3235"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(rolls >= 3).mean()"
+    "(cars >= 3).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +160,7 @@
        "0.32332358381693654"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,22 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8006"
+       "0.8633"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(rolls >= 1).mean()"
+    "(cars >= 1).mean()"
    ]
   },
   {
@@ -219,29 +230,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.2963230507704013"
+       "2.296476704071875"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gpa = np.random.normal(3, .3, size=(1000000))\n",
+    "gpa = np.random.normal(3, .3, size=(10000000))\n",
     "\n",
     "np.percentile(gpa, .95)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5065439119145583"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.norm(3.0, .3).ppf(.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What GPA constitutes the bottom 15% of the class?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1069700388183508"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.percentile(gpa, .15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +308,7 @@
        "3.4934560880854417"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,19 +321,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* What GPA constitutes the bottom 15% of the class?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "An eccentric alumnus left scholarship money for students in the third decile from the bottom of their class. Determine the range of the third decile.  Would a student with a 2.8 grade point average qualify for this scholarship?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +335,7 @@
        "2.842679846187588"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +363,7 @@
        "0.0477903522728147"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,18 +532,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'rv_frozen' object has no attribute 'plt'",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'rv_frozen' and 'int'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-107-ab3e514ba746>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# 2 min per order\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mstats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'rv_frozen' object has no attribute 'plt'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-38f5817ecc70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# 2 min per order\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mstats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'rv_frozen' and 'int'"
      ]
     }
    ],
@@ -503,7 +554,7 @@
     "# 15 mins left\n",
     "# 2 min per order\n",
     "\n",
-    "stats.norm(15, 3)"
+    "stats.norm(15, 3)\n"
    ]
   },
   {
@@ -511,8 +562,30 @@
    "metadata": {},
    "source": [
     "# 7\n",
-    "Connect to the employees database and find the average salary of current employees, along with the standard deviation. For the following questions, calculate the answer based on modeling the employees salaries with a normal distribution defined by the calculated mean and standard deviation then compare this answer to the actual values present in the salaries dataset.\n",
+    "Connect to the employees database and find the average salary of current employees, along with the standard deviation. For the following questions, calculate the answer based on modeling the employees salaries with a normal distribution defined by the calculated mean and standard deviation then compare this answer to the actual values present in the salaries dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a function named get_db_url. It should accept a username, hostname, password, and database name and...\n",
+    "# return a url formatted like in the examples in this lesson.\n",
     "\n",
+    "from env import host, user, password\n",
+    "def get_db_url(db, user=user, host=host, password=password):\n",
+    "    return f'mysql+pymysql://{user}:{password}@{host}/{db}'\n",
+    "    \n",
+    "df = pd.read_sql(\"\"\"SELECT * FROM employees LIMIT 5 OFFSET 50\"\"\", get_db_url('employees'))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* What percent of employees earn less than 60,000?"
    ]
   },
