--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -231,76 +231,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.296661029141932"
+       "3.4934005710189986"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gpa = np.random.normal(3, .3, size=(10000000))\n",
-    "\n",
-    "np.percentile(gpa, .95)"
+    "pd.Series(np.random.normal(3, .3, size=(10000000))).quantile(.95)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5065439119145583"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.norm(3.0, .3).ppf(.05)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* What GPA constitutes the bottom 15% of the class?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.1103823188203155"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.percentile(gpa, .15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +260,7 @@
        "3.4934560880854417"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,12 +273,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* What GPA constitutes the bottom 15% of the class?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.689239333935589"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(np.random.normal(3, .3, size=(10000000))).quantile(.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.689069983151863"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.norm(3.0, .3).ppf(.15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "An eccentric alumnus left scholarship money for students in the third decile from the bottom of their class. Determine the range of the third decile.  Would a student with a 2.8 grade point average qualify for this scholarship?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +334,7 @@
        "2.842679846187588"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,6 +342,23 @@
    "source": [
     "# Yes\n",
     "stats.norm(3.0, .3).ppf(.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The range would be 2.7473184089443548 to 2.842613018088369\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\" The range would be {pd.Series(np.random.normal(3, .3, size=(10000000))).quantile(.2)} to {pd.Series(np.random.normal(3, .3, size=(10000000))).quantile(.3)}\")"
    ]
   },
   {
@@ -374,6 +389,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0477058"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(pd.Series(np.random.normal(3, .3, size=(10000000))) >= 3.5).mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -399,6 +436,26 @@
    ],
    "source": [
     "stats.poisson(.02).sf(96/4326)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01979"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(np.random.poisson(.02, 1000000) > (97/4326)).mean()"
    ]
   },
   {
@@ -432,6 +489,26 @@
     "# range = 1 - 60\n",
     "\n",
     "stats.binom(60, .01).sf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.452837"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(np.random.binomial(60, .01, size=1000000) > 0).mean()"
    ]
   },
   {
@@ -469,6 +546,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 2, ..., 3, 2, 1])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.binomial(stu_visit, clean_chance, size=1000000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -478,7 +575,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -493,6 +592,26 @@
    ],
    "source": [
     "stats.binom(stu_visit, clean_chance).pmf(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.271697"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(np.random.binomial(stu_visit, clean_chance, size=1000000) == 2).mean()"
    ]
   },
   {
@@ -767,27 +886,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 109,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.12313880e-05, 2.07192416e-05])"
+       "0.33506056854908584"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.norm(72012.235857, 17309.995380).pdf([65000,80000])"
+    "stats.norm(72012.235857, 17309.995380).cdf(80000) - stats.norm(72012.235857, 17309.995380).cdf(65000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +917,7 @@
        "0.32515700221552196"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
